--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<h1>Hello World!</h1>
+<link rel="stylesheet"href="style.css">
+
+<h1>HTMLの学習</h1>
 
 <h2>ヘッダータグ</h2>
 
@@ -19,3 +21,49 @@ Hello World!
 <p>strong タグは協調表示</p>
 
 <p>font タグは文字の詳細を設定できます。color="red" のように入力すると、赤い文字にできます。</p>
+
+<h2>a リンクの例</h2>
+
+<a href="https://developer.mozilla.org/ja/"><h2>参考ウェブサイト</h2></a>
+
+
+<p>
+　Mozillaは、オープンソースのブラウザやweb関連ソフトウェア開発団体です。
+
+<br>
+
+　今回授業では、MDZという、ウェブブラウザを開発する人向けのサイトを参考にします。
+</p>
+
+<button onclick="alert("Hello,World")">クリックしてみてください</button>
+
+
+<h2><img 画像の例></h2>
+<img src="https://st2.depositphotos.com/4760391/10082/i/450/depositphotos_100824570-stock-photo-studio-portrait-of-adolf-hitler.jpg"
+alt="なんの画像かわからない画像" width="1000" height="750">
+
+<h2>input 入力フォームの例</h2>
+<input type="color" value="#ff0000">
+
+<p>タグの中に追加で記述される情報を<strong>属性</strong>という</p>
+
+<br>
+
+<input type="number"id="num"value="0">
+<button onclick="result.textContent = Number(num.value)+1">1を加算</button>
+<p id="result">結果がここに表示されます</p>
+
+<h2>ol ul リストの例</h2>
+<h3>番号なしリスト</h3>
+
+<ol>
+  <li>りんご</li>
+  <li>バナナ</li>
+  <li>みかん</li>
+</ol>
+
+<ul>
+  <li>りんご</li>
+  <li>バナナ</li>
+  <li>みかん</li>
+</ul>
