--- a/6_6/index.html
+++ b/6_6/index.html
@@ -39,7 +39,7 @@ Hello World!
 
 
 <h2><img 画像の例></h2>
-<img src="https://st2.depositphotos.com/4760391/10082/i/450/depositphotos_100824570-stock-photo-studio-portrait-of-adolf-hitler.jpg"
+<img src="https://pbs.twimg.com/media/FKFU53aaAAAYgK9.jpg"
 alt="なんの画像かわからない画像" width="1000" height="750">
 
 <h2>input 入力フォームの例</h2>
